system/clusters/develop/resource-management/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rm
  labels:
    io.kompose.service: db
  name: resource-catalogue-db
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    io.kompose.service: db
