system/clusters/develop/resource-management/pycsw-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rm
  labels:
    io.kompose.service: pycsw
  name: resource-catalogue-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    io.kompose.service: pycsw
